# AlphaMate

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NEWS  NEWS.txt  README  README.txt  TODO  TODO.txt
doc/: .gitignore  AlphaMate.rst  AlphaMate.txt  Makefile  conf.py  index.rst  makePdf.sh  preamble.sty  test.sty
example/: .gitignore
example/AngelaBug/: CoancestryMatrix.txt
example/Animal/: AlphaMateSpec.txt  GenerateData.R
example/AnimalLarge/: .gitignore  AlphaMateSpec.txt  GenerateData.R
example/BugCases/AngelaBug/: AlphaMateSpec.txt  CoancestryMatrix.txt  SelectionCriterionFile.txt
example/BugCases/ThorstenBug/: AlphaMateSpec.txt  Criterion.txt  Nrm.txt
example/CoreDiversitySet/: AlphaMateSpec.txt
example/GenomeEditing/: AlphaMateSpec.txt  AlphaMateSpecEdit1.txt  AlphaMateSpecEdit10.txt  AlphaMateSpecEdit20.txt  AlphaMateSpecEdit5.txt  Criterion.txt  CriterionEdit1.txt  CriterionEdit10.txt  CriterionEdit20.txt  CriterionEdit5.txt  Gender.txt  GenerateData.R
example/PlantCross/: AlphaMateSpec.txt  Criterion.txt  GenerateData.R  Nrm.txt  Pools.txt
example/PlantSelf/: AlphaMateSpec.txt  GenerateData.R
example/Tiny/: AlphaMateSpec.txt  Criterion.txt  Nrm.txt
example/test/: AlphaMateSpec.txt  Gender.txt
example/test2/: AlphaAGHSpec.txt  AlphaMateSpec.txt  AlphaMateSpecNew.txt  Gender.txt  PedigreeEbv.txt  Seed.txt  SeedOld.txt  Tbv.txt
src/: AlphaEvolveMod.f90  AlphaMate.f90  AlphaMateModule.f90  AlphaMateNew.f90  AlphaSuiteMod.f90  CMakeLists.txt  OrderPackMod.f90
test/: AlphaMateSpec.txt  Ebv.txt  RelMat.txt  qMate.sh
tests/: TestAlphaMateModule.pf  testSuites.inc
util/: DistributeAlphaMate.sh  Functions.R  GenericMatVal.R  PlotFrontier.R  TargetDegreeTable.R  optiSel.R  plots.R
