SET(ALPHAMATE_src
  ${SRCALPHAIMPUTE}AlphaMateModule.f90
  ${SRCALPHAIMPUTE}AlphaMate.f90
)

ADD_DEFINITIONS(-D COMMIT=${VERSION})
ADD_EXECUTABLE(${ALPHAMATEEXE} ${ALPHAMATE_src})

set(TESTPROG testProg)

# add external links here
TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${AHLIB})
TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${MKL_BLAS_LIB})

	TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${MKL_LAPACK_LIB})

if (${MKL_SCALAPACK_LIB})
	TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${MKL_SCALAPACK_LIB})
endif()
TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${MKL_ILP_LIB})
TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${MKL_THREAD_LIB})
TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${MKL_CORE_LIB})

# TARGET_LINK_LIBRARIES(${TESTPROG} ${RESULT})
INSTALL(TARGETS ${ALPHAMATEEXE} RUNTIME DESTINATION bin)
