SET(ALPHAMATE_src
  ${SRCALPHAMATE}AlphaMateModule.f90
  ${SRCALPHAMATE}AlphaMate.f90
)

SET(ALPHARELATE_src
  ../alpharelate/src/AlphaRelateModule.f90
)

ADD_DEFINITIONS(-D COMMIT=${VERSION})
ADD_EXECUTABLE(${ALPHAMATEEXE} ${ALPHAMATE_src})

SET(TESTPROG testProg)

# Add external links here
TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${AHLIB})
TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${ALPHARELATELIB})
IF(ALPHARELATELIB)
  ADD_LIBRARY(${ALPHARELATELIB} STATIC ${ALPHARELATE_src})
  TARGET_LINK_LIBRARIES(${ALPHARELATELIB} ${AHLIB})
ENDIF()
TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${MKL_BLAS_LIB})
TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${MKL_LAPACK_LIB})
IF(${MKL_SCALAPACK_LIB})
  TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${MKL_SCALAPACK_LIB})
ENDIF()
TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${MKL_ILP_LIB})
TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${MKL_THREAD_LIB})
TARGET_LINK_LIBRARIES(${ALPHAMATEEXE} ${MKL_CORE_LIB})
# TARGET_LINK_LIBRARIES(${TESTPROG} ${RESULT})

INSTALL(TARGETS ${ALPHAMATEEXE} RUNTIME DESTINATION bin)
